feat(notifier): implement user contact info fetching

--- a/packages/notifier/deliverer/email/templates/hello.html
+++ b/packages/notifier/deliverer/email/templates/hello.html
@@ -1,5 +1,8 @@
 <h1>Hello, World!</h1>
+<p><strong>.UserContactInfo.Username</strong>: {{ .UserContactInfo.Username }}</p>
 <p><strong>.UserContactInfo.Email</strong>: {{ .UserContactInfo.Email }}</p>
+<p><strong>.UserContactInfo.FirstName</strong>: {{ .UserContactInfo.FirstName }}</p>
+<p><strong>.UserContactInfo.LastName</strong>: {{ .UserContactInfo.LastName }}</p>
 <p><strong>.NotificationMessage.UserID</strong>: {{ .NotificationMessage.UserID }}</p>
 <p><strong>.NotificationMessage.Type</strong>: {{ .NotificationMessage.Type }}</p>
 <p><strong>.NotificationMessage.Meta</strong>: {{ .NotificationMessage.Meta }}</p>
