feat: integrate with Ory stack

--- a/packages/notifier/deliverer/email/templates/WebsiteScanningFailed.html
+++ b/packages/notifier/deliverer/email/templates/WebsiteScanningFailed.html
@@ -1,4 +1,4 @@
-<p>Hello {{ .UserContactInfo.Username }},</p>
+<p>Hello {{ .UserContactInfo.FirstName }} {{ .UserContactInfo.LastName }},</p>
 <p></p>
 
 <p>We are not able to scan your drupal website <a target="_blank" href="{{ .NotificationMessage.Meta.WebsiteURL }}">{{ .NotificationMessage.Meta.WebsiteURL }}</a>. It might be down!</p>
