--- a/packages/notifier/deliverer/email/templates/WebsiteNeedsUpdates.html
+++ b/packages/notifier/deliverer/email/templates/WebsiteNeedsUpdates.html
@@ -1,4 +1,4 @@
-<p>Hello {{ .UserContactInfo.Username }},</p>
+<p>Hello {{ .UserContactInfo.FirstName }} {{ .UserContactInfo.LastName }},</p>
 <p></p>
 
 <p>Your drupal website <a target="_blank" href="{{ .NotificationMessage.Meta.WebsiteURL }}">{{ .NotificationMessage.Meta.WebsiteURL }}</a> is under risk!</p>
